--- a/src/main/resources/templates/manageUsers.html
+++ b/src/main/resources/templates/manageUsers.html
@@ -80,6 +80,8 @@
 					<span th:text="${param.successMessage[0]}"></span>
             </div>		
 			<div class="agile-tables">
+			
+				<a href="/registration" class="btn btn-info" role="button">ADD  User</a>
 
 				  <h3>Manage Users</h3>
 				  <table id="table-two-axis" class="two-axis">
